# spaceship_titanic_kaggle

./: .env.example  .gitignore  Makefile  README.md  compose.yml  pyproject.toml
.dvc/: config
notebooks/: eda.ipynb
src/: cli.py
src/application/services/: __init__.py  evaluation_service.py  optimization_service.py  submission_service.py  training_service.py
src/domain/entities/: __init__.py  dataset.py  experiment_config.py  prediction.py
src/domain/ports/: __init__.py  data_loader_port.py  experiment_tracker_port.py  model_port.py  preprocessor_port.py
src/infrastructure/adapters/data_loaders/: __init__.py  csv_loader.py
src/infrastructure/adapters/models/pytorch/: __init__.py  neural_net.py
src/infrastructure/adapters/models/sklearn/: __init__.py  gradient_boosting.py  linear_regression.py  random_forest.py  ridge.py  svm.py
src/infrastructure/adapters/models/tensorflow/: __init__.py  tf_model.py
src/infrastructure/adapters/models/xgboost/: __init__.py  xgb_model.py
src/infrastructure/adapters/preprocessors/: __init__.py  sklearn_preprocessor.py
src/infrastructure/adapters/trackers/: mlflow_tracker.py
src/infrastructure/config/: settings.py
