[project]
name = "kaggle-competition"
version = "0.1.0"
description = "Kaggle competition template with DDD architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.0",
    "dvc>=3.66.1",
    "dvc-s3>=3.0.0",
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.0",
    "mlflow>=3.9.0",
    "numpy>=2.4.0",
    "optuna>=4.7.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
xgboost = ["xgboost>=3.2.0"]
pytorch = ["torch>=2.10.0"]
tensorflow = ["tensorflow>=2.18.0"]
all = [
    "xgboost>=3.2.0",
    "torch>=2.10.0",
    "tensorflow>=2.18.0",
]
